Renaming to fit with other naming standard

--- a/templates/dionaea.sysconfig.j2
+++ b/templates/dionaea.sysconfig.j2
@@ -4,7 +4,7 @@ DEBUG=true
 # Leaving this blank will default to the docker container IP
 IP_ADDRESS={{ dionaea_ip_address }}
 
-CHN_SERVER="{{ chn_server_url }}"
+CHN_SERVER="{{ chn_server }}"
 DEPLOY_KEY="{{ chn_deploy_key }}"
 DIONAEA_JSON="/etc/dionaea/dionaea.json"
 
