Removing services for now

--- a/templates/dionaea.sysconfig.j2
+++ b/templates/dionaea.sysconfig.j2
@@ -15,7 +15,7 @@ LISTEN_INTERFACES="eth0"
 
 # Service options
 # blackhole, epmap, ftp, http, memcache, mirror, mongo, mqtt, mssql, mysql, pptp, sip, smb, tftp, upnp
-SERVICES=(ftp mssql smb)
+SERVICES=()
 
 
 # Logging options
