--- a/templates/dionaea.sysconfig.j2
+++ b/templates/dionaea.sysconfig.j2
@@ -20,5 +20,5 @@ SERVICES=()
 
 # Logging options
 HPFEEDS_ENABLED=true
-FEEDS_SERVER="localhost"
+FEEDS_SERVER="{{ hpfeeds_server }}"
 FEEDS_SERVER_PORT=10000
